<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="vertical">
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="horizontal"
            tools:ignore="UselessParent">
            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/toggleButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/toggle_turn_off"
                tools:ignore="MissingConstraints" />
        </LinearLayout>
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="horizontal"
            tools:ignore="MissingConstraints,UselessParent">

            <EditText
                android:id="@+id/editText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:hint="@string/edit_text"
                android:minHeight="48dp"
                android:textColorHint="#757575"
                tools:ignore="LabelFor,MissingConstraints,TextFields,DuplicateSpeakableTextCheck" />

            <Button
                android:id="@+id/editTextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button"
                tools:ignore="TouchTargetSizeCheck,DuplicateSpeakableTextCheck" />
        </LinearLayout>
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="horizontal">

            <AutoCompleteTextView
                android:id="@+id/autoComplete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/edit_text"
                android:minHeight="48dp"
                android:textColorHint="#757575" />

            <Button
                android:id="@+id/autoCompleteButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button"
                tools:ignore="TouchTargetSizeCheck" />
        </LinearLayout>
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="horizontal">

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="210dp"
                android:layout_height="48dp"
                android:contentDescription="@string/spinner"
                android:gravity="center"
                android:prompt="@string/spinner"
                android:textSize="26sp" />
        </LinearLayout>
        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/radioButton1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_button1" />
            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_button2" />
            <RadioButton
                android:id="@+id/radioButton3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_button3" />
            <Button
                android:id="@+id/radioSubmit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button"
                tools:ignore="TouchTargetSizeCheck" />
        </RadioGroup>
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="horizontal">
            <Button
                android:id="@+id/popupMenu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button"
                tools:ignore="TouchTargetSizeCheck" />
        </LinearLayout>
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="horizontal">
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/menu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/spinner"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:ellipsize="end"
                android:maxLines="1">

                <AutoCompleteTextView
                    android:id="@+id/autoCompleteMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:inputType="none" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="horizontal">
            <TextView
                android:id="@+id/textViewPress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textView" />
        </LinearLayout>
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="horizontal">
            <TextView
                android:id="@+id/background"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:background="@drawable/background" />
        </LinearLayout>
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="horizontal">
            <Button
                android:id="@+id/activityChange"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/second_activity"
                tools:ignore="ButtonStyle,TouchTargetSizeCheck" />
            <Button
                android:id="@+id/gridView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/show_gridview"
                tools:ignore="ButtonStyle" />
            <Button
                android:id="@+id/song"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/song"
                tools:ignore="ButtonStyle"
                android:onClick="playMusic" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>